fixed conditional rendering and added composer.json

--- a/style.css
+++ b/style.css
@@ -1,59 +1,55 @@
-
 body {
- font-family: Arial, Helvetica, sans-serif;
- background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
 }
-
 
 #content {
- width: 800px;
- margin: 0 auto;
- padding: 10px;
- background: white;
- border: 1px solid #000;
+  width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+  background: white;
+  border: 1px solid #000;
 }
 
-
-.heading{
-	color: #333333;
-	text-align: center;
+.heading {
+  color: #333333;
+  text-align: center;
 }
 
 h1 {
-	font-size: 32px;
-    display: block;
-	color: #b50909;
-    margin-block-start: 1em;
-    font-weight: bold;
+  font-size: 32px;
+  display: block;
+  color: #b50909;
+  margin-block-start: 1em;
+  font-weight: bold;
 }
 
-h2{
-	font-size: 17px;
-	font-weight: normal;
-	text-decoration: italic;
+h2 {
+  font-size: 17px;
+  font-weight: normal;
+  text-decoration: italic;
 }
 
 label {
- color: #010202;
- padding-left: 00px;
- font-size: 14px;
+  color: #010202;
+  padding-left: 00px;
+  font-size: 14px;
 }
 
-
 .boxes {
-	font-size: 13px;
+  font-size: 13px;
 }
 
 .boxes Rules {
-	height: 45px;
+  height: 45px;
 }
 
 .boxesRight {
-	padding: 5px;
+  padding: 5px;
 }
 
 #buttons {
-	text-align: center;
+  text-align: center;
 }
 
 .button {
@@ -71,95 +67,101 @@ label {
   font-weight: bold;
   text-decoration: none;
   outline: none;
-  color: #FFF;
+  color: #fff;
   background-color: rgb(152, 0, 0);
   border: none;
   border-radius: 15px;
 }
 
+.button:disabled,
+.button[disabled] {
+  border: 1px solid #999999;
+  background-color: #222;
+  color: #fff;
+}
+
 .button:hover {
   background-color: #222;
   color: #fff;
-  }
+}
 
 .button:active {
   transform: translateY(2px);
 }
 
 #buttons input {
- margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .inputbox {
- width: 125px;
- height: 35px;
- margin-bottom: .5em;
+  width: 125px;
+  height: 35px;
+  margin-bottom: 0.5em;
+  font-size: 15px;
+  color: "black";
 }
 
-
 table tr {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 .footer {
-	text-align: right;
-	color: #333333;
-	font-size: 15px;
+  text-align: right;
+  color: #333333;
+  font-size: 15px;
 }
 
-
-
 legend {
-	font-size: 18px;
-	text-align: center;
-	font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .roll {
-	text-align: left;
-	display: inline-block;
+  text-align: left;
+  display: inline-block;
 }
 
 .roll fieldset {
-	float: left;
+  float: left;
 }
 
 form {
-	display: inline-block;
+  display: inline-block;
 }
 
 section {
-	border: 5px red;
-	float: left;
-	padding-right: 20px;
-	width: 380px;
-	height: 390px;
+  border: 5px red;
+  float: left;
+  padding-right: 20px;
+  width: 380px;
+  height: 390px;
 }
 
 fieldset {
-	width: 340px;
+  width: 340px;
 }
 
 .fieldsetRight {
-	height: 390px;
+  height: 390px;
 }
 
 .fieldsetLeft {
-	height: 200px;
+  height: 200px;
 }
 
 .dicePictures {
-	display: flex;
+  display: flex;
 }
 
 .dicePictures #firstDice {
-	padding-left: 20px;
-	width: 50%;
+  padding-left: 20px;
+  width: 50%;
 }
 
 .result {
-	width: 270px;
-	height: 40px;
-	margin-bottom: .5em;
-	text-decoration: bold;
+  width: 270px;
+  height: 40px;
+  margin-bottom: 0.5em;
+  text-decoration: bold;
 }
